--- a/src/components/Layout/Container.module.scss
+++ b/src/components/Layout/Container.module.scss
@@ -1,4 +1,5 @@
 .container {
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -7,6 +8,7 @@
   border-radius: 0.5em;
   gap: 2em;
   width: 100%;
+  overflow: hidden;
 }
 
 
